--- a/views/friends.erb
+++ b/views/friends.erb
@@ -11,5 +11,11 @@
 
     <!-- Iterate through the @friends array here to display each item in its own <h2> tag -->
 
+    <h2>
+      <% @friends.each do |friend| %>
+      <h2><%= friend %></h2>
+      <% end %>
+    </h2>
+
   </body>
 </html>
