--- a/views/reversed.erb
+++ b/views/reversed.erb
@@ -10,6 +10,10 @@
     <h1>The Ultimate Reversed String!</h1>
 
     <!--   Use ERB tags to bring in an instance variable containing the reversed string -->
-
+    <h2><%= @reversed_string %></h2>
+    
+    <form method="Get" action="/reverse">
+      <input type="submit">
+    </form>
   </body>
 </html>
